Fix code quality: rename DTO to dto, use Stream.toList()
- Rename DTO package from uppercase to lowercase (convention)
- Replace Collectors.toList() with Stream.toList() (Java 16+)
- Remove unused Collectors import

Co-Authored-By: Claude Haiku 4.5 <noreply@anthropic.com>