@@ -5,8 +5,8 @@ import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
-import tn.esprit.followup_alert_service.DTO.AlertRequestDTO;
-import tn.esprit.followup_alert_service.DTO.AlertResponseDTO;
+import tn.esprit.followup_alert_service.dto.AlertRequestDTO;
+import tn.esprit.followup_alert_service.dto.AlertResponseDTO;
 import tn.esprit.followup_alert_service.Entity.Alert;
 import tn.esprit.followup_alert_service.Entity.AlertLevel;
 import tn.esprit.followup_alert_service.Entity.AlertStatus;
@@ -14,7 +14,6 @@ import tn.esprit.followup_alert_service.Service.AlertService;
 
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api/alerts")
@@ -40,7 +39,7 @@ public class AlertController {
     public ResponseEntity<List<AlertResponseDTO>> getAllAlerts() {
         return ResponseEntity.ok(alertService.getAllAlerts().stream()
                 .map(AlertResponseDTO::fromEntity)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @GetMapping("/{id}")
@@ -52,28 +51,28 @@ public class AlertController {
     public ResponseEntity<List<AlertResponseDTO>> getAlertsByPatientId(@PathVariable Long patientId) {
         return ResponseEntity.ok(alertService.getAlertsByPatientId(patientId).stream()
                 .map(AlertResponseDTO::fromEntity)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @GetMapping("/level/{level}")
     public ResponseEntity<List<AlertResponseDTO>> getAlertsByLevel(@PathVariable AlertLevel level) {
         return ResponseEntity.ok(alertService.getAlertsByLevel(level).stream()
                 .map(AlertResponseDTO::fromEntity)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @GetMapping("/status/{status}")
     public ResponseEntity<List<AlertResponseDTO>> getAlertsByStatus(@PathVariable AlertStatus status) {
         return ResponseEntity.ok(alertService.getAlertsByStatus(status).stream()
                 .map(AlertResponseDTO::fromEntity)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @GetMapping("/critical/new")
     public ResponseEntity<List<AlertResponseDTO>> getCriticalNewAlerts() {
         return ResponseEntity.ok(alertService.getCriticalNewAlerts().stream()
                 .map(AlertResponseDTO::fromEntity)
-                .collect(Collectors.toList()));
+                .toList());
     }
 
     @PatchMapping("/{id}/view")
